header created with items aligned

--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta html-equiv="X-UA-Compatible" content="ie=edge">
     <title>GitHub Clone</title>
+    <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 </head>
 <body>
     <main>
-        
+        <header class="header">
+            <section class="header-menu">
+                <a class="gitCat" href="#"><img src="#" alt=""></a>
+                <div class="whyGitHub">Why GitHub?</div>
+                <div class="business">Business</div>
+                <div class="explore">Explore</div>
+                <div class="marketplace">Marketplace</div>
+                <div class="pricing">Pricing</div>
+                <div>
+                    <input type="Search GitHub">
+                    <img src="#" alt="">
+                </div>
+                <button class="signIn">Sign In</button>
+                <button class="signUp">Sign Up</button>
+            </section>
+        </header>
+        <section>
+
+        </section>
     </main>
 </body>
 </html>
