bacgroung image simple code added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta html-equiv="X-UA-Compatible" content="ie=edge">
     <title>GitHub Clone</title>
+    <link rel="icon" href="https://image.flaticon.com/icons/png/512/25/25231.png">
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 </head>
@@ -11,18 +12,23 @@
     <main>
         <header class="header">
             <section class="header-menu">
-                <a class="gitCat" href="#"><img src="#" alt=""></a>
+                <a class="gitCat" href="#"><img class="octicon" src="https://static1.squarespace.com/static/5af89e5a5ffd202a11b6a6ec/t/5afd16ed6d2a73124e58b76a/1526535939737/github-logo-2.png" alt=""></a>
                 <div class="whyGitHub">Why GitHub?</div>
                 <div class="business">Business</div>
                 <div class="explore">Explore</div>
                 <div class="marketplace">Marketplace</div>
                 <div class="pricing">Pricing</div>
                 <div>
-                    <input type="Search GitHub">
+                    <input class="search" placeholder="Search GitHub" type="text">
                     <img src="#" alt="">
                 </div>
                 <button class="signIn">Sign In</button>
                 <button class="signUp">Sign Up</button>
+            </section>
+            <section class="jumbotron">
+                <div>
+
+                </div>
             </section>
         </header>
         <section>
