form added to jumbotron area

--- a/index.html
+++ b/index.html
@@ -25,12 +25,21 @@
                 <button class="signIn">Sign In</button>
                 <button class="signUp">Sign Up</button>
             </section>
-            <section class="jumbotron">
-                <div>
+        </header>
+        <section class="jumbotron">
+            <div class="container">
+                <div class="info">
+                    <h1>Build for <br>developers</h1>
+                    <p>GitHub is a development platform inspired by the way you work. From <a class="hightlight">open source</a> to <a
+                            class="hightlight">business</a>, you can host and review
+                        code, manage projects, and build software alongside 31 million developers.</p>
+                </div>
+                <div class="formContainer">
 
                 </div>
-            </section>
-        </header>
+            </div>
+            
+        </section>
         <section>
 
         </section>
