mobile header items align, toggle-button created

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <body>
     <main>
         <header class="header">
+            <a class="gitCat" href="index.html">
+                <img class="octicon" src="https://static1.squarespace.com/static/5af89e5a5ffd202a11b6a6ec/t/5afd16ed6d2a73124e58b76a/1526535939737/github-logo-2.png" alt="">
+            </a>
             <section class="header-menu">
-                <a class="gitCat" href="#"><img class="octicon" src="https://static1.squarespace.com/static/5af89e5a5ffd202a11b6a6ec/t/5afd16ed6d2a73124e58b76a/1526535939737/github-logo-2.png" alt=""></a>
                 <div class="whyGitHub">Why GitHub?</div>
                 <div class="business">Business</div>
                 <div class="explore">Explore</div>
@@ -23,13 +25,19 @@
                     <img src="#" alt="">
                 </div>
                 <button class="signIn">Sign In</button>
-                <button class="signUp">Sign Up</button>
+                <button class="signUp">Sign up</button>
+                <button class="toggle-button">
+                    <span class="toggle-button__bar"></span>
+                    <span class="toggle-button__bar"></span>
+                    <span class="toggle-button__bar"></span>
+                </button>
             </section>
+            
         </header>
         <section class="jumbotron">
             <div class="container">
                 <div class="info">
-                    <h1>Build for <br>developers</h1>
+                    <h1>Build for developers</h1>
                     <p>GitHub is a development platform inspired by the way you work. From <a class="hightlight">open source</a> to <a
                             class="hightlight">business</a>, you can host and review
                         code, manage projects, and build software alongside 31 million developers.</p>
