sign up form styled

--- a/index.html
+++ b/index.html
@@ -43,7 +43,15 @@
                         code, manage projects, and build software alongside 31 million developers.</p>
                 </div>
                 <div class="formContainer">
-
+                    <label for="username">Username</label>
+                    <input type="text" placeholder="Pick a username" id="username" required>
+                    <label for="email">Email</label>
+                    <input type="email" placeholder="you@example.com" id="email" required>
+                    <label for="password">Password</label>
+                    <input type="password" placeholder="Create a password" id="password" required>
+                    <p>Make sure it's more than 15 characters, or at least 8 characters, including a number, and a lowercase letter.</p>
+                    <button type="submit" class="button">Sign up for GitHub</button>
+                    <p>By clicking “Sign up for GitHub”, you agree to our <a>terms of service</a> and <a>privacy statement</a>. We’ll occasionally send you account related emails.</p>
                 </div>
             </div>
             
