--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
                     <button type="submit" class="button">Sign up for GitHub</button>
                     <p>By clicking “Sign up for GitHub”, you agree to our <a>terms of service</a> and <a>privacy statement</a>. We’ll occasionally send you account related emails.</p>
                 </div>
+                <div>
+                    <button type="submit" class="buttonOut">Sign up for GitHub</button>
+                </div>
             </div>
-            
         </section>
         <section>
 
