--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta html-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub Clone</title>
     <link rel="icon" href="https://image.flaticon.com/icons/png/512/25/25231.png">
     <link rel="stylesheet" href="main.css">
@@ -51,15 +52,21 @@
                     <input type="password" placeholder="Create a password" id="password" required>
                     <p>Make sure it's more than 15 characters, or at least 8 characters, including a number, and a lowercase letter.</p>
                     <button type="submit" class="button">Sign up for GitHub</button>
-                    <p>By clicking “Sign up for GitHub”, you agree to our <a>terms of service</a> and <a>privacy statement</a>. We’ll occasionally send you account related emails.</p>
+                    <p>By clicking “Sign up for GitHub”, you agree to our <a>terms of service</a> and <a>privacy statement</a>. We’ll 
+                        occasionally send you account related emails.</p>
                 </div>
-                <div>
                     <button type="submit" class="buttonOut">Sign up for GitHub</button>
-                </div>
             </div>
         </section>
-        <section>
-
+        <section class="tryGitHubConteiner">
+            <div class="tryGitHub">
+                <h1>Try GitHub Enterprise</h1>
+                <p>Use GitHub on-premises with your own servers or in a private cloud with <a id="pricingLink" href="#">GitHub Enterprise</a>. Improve your developer
+                    efficiency with flexible deployment options, centralized permissions, hundreds of integrations, technical support, and
+                    more.</p>
+                <button class="contactSales">Contact Slaes</button>
+                <button class="startTrial">Start a free trial</button>
+            </div>
         </section>
     </main>
 </body>
