buttons color fix in the tryGitHub section

--- a/index.html
+++ b/index.html
@@ -68,6 +68,16 @@
                 <button class="startTrial">Start a free trial</button>
             </div>
         </section>
+        <section class="business">
+            <div>
+                <p>More than 2.1 million businesses and organizations use GitHub</p>
+                <img src="#" alt="">
+                <img src="#" alt="">
+                <img src="#" alt="">
+                <img src="#" alt="">
+                <img src="" alt="">
+            </div>
+        </section>
     </main>
 </body>
 </html>
