businesses section complited

--- a/index.html
+++ b/index.html
@@ -68,14 +68,48 @@
                 <button class="startTrial">Start a free trial</button>
             </div>
         </section>
-        <section class="business">
-            <div>
+        <section class="businessesContainer">
+            <div class="businessInfo">
                 <p>More than 2.1 million businesses and organizations use GitHub</p>
-                <img src="#" alt="">
-                <img src="#" alt="">
-                <img src="#" alt="">
-                <img src="#" alt="">
-                <img src="" alt="">
+                <ul class="businessLogos">
+                    <li>
+                        <img class="airbnbLogo" src="https://assets-cdn.github.com/images/modules/site/logos/airbnb-logo.png"
+                            alt="airbnb">
+                    </li>
+                    <li>
+                        <img class="sapLogo" src="https://assets-cdn.github.com/images/modules/site/logos/sap-logo.png" alt="">
+                    </li>
+                    <li>
+                        <img class="ibmLogo" src="https://assets-cdn.github.com/images/modules/site/logos/ibm-logo.png" alt="">
+                    </li>
+                    <li>
+                        <img class="googleLogo" src="https://assets-cdn.github.com/images/modules/site/logos/google-logo.png" alt="">
+                    </li>
+                    <li>
+                        <img class="paypalLogo" src="https://assets-cdn.github.com/images/modules/site/logos/paypal-logo.png" alt="">
+                    </li>
+                    <li>
+                        <img class="bloombergLogo" src="https://assets-cdn.github.com/images/modules/site/logos/bloomberg-logo.png" alt="">
+                    </li>
+                    <li>
+                        <img class="spotyfyLogo" src="https://assets-cdn.github.com/images/modules/site/logos/spotify-logo.png" alt="">
+                    </li>
+                    <li>
+                        <img class="swiftLogo" src="https://assets-cdn.github.com/images/modules/site/logos/swift-logo.png" alt="">
+                    </li>
+                    <li>
+                        <img class="facebookLogo" src="https://assets-cdn.github.com/images/modules/site/logos/facebook-logo.png" alt="Facebook">
+                    </li>
+                    <li>
+                        <img class="nodeLogo" src="https://assets-cdn.github.com/images/modules/site/logos/node-logo.png" alt="Node.js">
+                    </li>
+                    <li>
+                        <img class="nasaLogo" src="https://assets-cdn.github.com/images/modules/site/logos/nasa-logo.png" alt="NASA">
+                    </li>
+                    <li>
+                        <img class="walmartLogo" src="https://assets-cdn.github.com/images/modules/site/logos/walmart-logo.png" alt="Walmart">
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
