forTeamsSignupContainer implemented for mobile

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="https://image.flaticon.com/icons/png/512/25/25231.png">
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
 </head>
 <body>
     <main>
@@ -32,8 +33,7 @@
                     <span class="toggle-button__bar"></span>
                     <span class="toggle-button__bar"></span>
                 </button>
-            </section>
-            
+            </section> 
         </header>
         <section class="jumbotron">
             <div class="container">
@@ -110,6 +110,16 @@
                         <img class="walmartLogo" src="https://assets-cdn.github.com/images/modules/site/logos/walmart-logo.png" alt="Walmart">
                     </li>
                 </ul>
+            </div>
+        </section>
+        <section class="forTeams">
+            <p class="sectionTitle">GitHub for teams</p>
+            <div class="forTeamsSignupContainer">
+                <h1>A better way to work together</h1>
+                <p>GitHub brings teams together to work through problems, move ideas forward, and learn from each other along the way.</p>
+                <div class="btn">
+                    <button class="joinGitHub">Sign up your team <span class="bump-link-symbol">→</span></button>
+                </div>
             </div>
         </section>
     </main>
