betterTeamContent added and styled, arrow not added

--- a/index.html
+++ b/index.html
@@ -122,29 +122,33 @@
                 </div>
             </div>
             <div class="betterTeam">
-                <img class="hubot" src="https://assets-cdn.github.com/images/modules/site/home-illo-team.svg" alt="">
-                <div class="summary">
-                    <a href="#">
-                        <div>
-                            <h3>Write better code</h3>
-                            <p>Collaboration makes perfect. The conversations and code reviews that happen in Pull Requests help your team share the
-                            weight of your work and improve the software you build. <span class="link-wbc">Learn about code review.</span></p>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div>
-                            <h3>Manage your chaos</h3>
-                            <p>Take a deep breath. On GitHub, project management happens in Issues and Projects, right alongside your code. All you
-                            have to do is mention a teammate to get them involved. <span class="link-myh">Learn about project management.</span></p>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div>
-                            <h3>Find the right tools</h3>
-                            <p>Browse and buy apps from GitHub Marketplace with your GitHub account. Find the tools you like or discover new
-                            favorites—then start using them in minutes. <span class="link-mktg">Learn about integrations.</span></p>
-                        </div>
-                    </a>
+                <div class="betterTeamContent">
+                    <div class="hubot">
+                        <img src="https://assets-cdn.github.com/images/modules/site/home-illo-team.svg" alt="">
+                    </div>
+                    <div class="summary">
+                        <a href="#">
+                            <div>
+                                <h3>Write better code</h3>
+                                <p>Collaboration makes perfect. The conversations and code reviews that happen in Pull Requests help your team share the
+                                weight of your work and improve the software you build. <span class="link-bt">Learn about code review.</span></p>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div>
+                                <h3>Manage your chaos</h3>
+                                <p>Take a deep breath. On GitHub, project management happens in Issues and Projects, right alongside your code. All you
+                                have to do is mention a teammate to get them involved. <span class="link-bt">Learn about project management.</span></p>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div>
+                                <h3>Find the right tools</h3>
+                                <p>Browse and buy apps from GitHub Marketplace with your GitHub account. Find the tools you like or discover new
+                                favorites—then start using them in minutes. <span class="link-bt">Learn about integrations.</span></p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
