security and administration section added mobile version

--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
             <div class="forTeamsSignupContainer">
                 <h1>A better way to work together</h1>
                 <p>GitHub brings teams together to work through problems, move ideas forward, and learn from each other along the way.</p>
-                <div class="btn">
+                <div>
                     <button class="joinGitHub">Sign up your team <span class="bump-link-symbol">→</span></button>
                 </div>
             </div>
             <div class="betterTeam">
-                <div class="betterTeamContent">
-                    <div class="hubot">
+                <div class="largeContainer">
+                    <div class="img-box">
                         <img src="https://assets-cdn.github.com/images/modules/site/home-illo-team.svg" alt="">
                     </div>
                     <div class="summary">
@@ -148,6 +148,32 @@
                                 favorites—then start using them in minutes. <span class="link-bt">Learn about integrations.</span></p>
                             </div>
                         </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="sa-container">
+            <p class="sectionTitle">Security and administration</p>
+            <div class="">
+                <div>
+                    <h1>Boxes? Check.</h1>
+                    <p>We worry about your administrative and security needs so you don’t have to. From flexible hosting to authentication
+                    options, GitHub can help you meet your team’s requirements.</p>
+                    <div>
+                        <button class="for-business">How GitHub works for business <span class="bump-link-symbol">→</span></button>
+                    </div>
+                </div>
+                <div class="largeContainer">
+                    <div class="img-box">
+                        <img src="https://assets-cdn.github.com/images/modules/site/home-illo-business.png" alt="">
+                    </div>
+                    <div class="summary">
+                        <h3>Code security</h3>
+                        <p>Prevent problems before they happen. Protected branches, signed commits, and required status checks protect your work
+                        and help you maintain a high standard for your code.</p>
+                        <h3>Access controlled</h3>
+                        <p>Encourage teams to work together while limiting access to those who need it with granular permissions and
+                        authentication through SAML/SSO and LDAP.</p>
                     </div>
                 </div>
             </div>
