integrations section added

--- a/index.html
+++ b/index.html
@@ -198,6 +198,19 @@
                 </div>
             </div>
         </section>
+        <section class="integrations">
+            <div class="integrationsContainer">
+                <p class="sectionTitle">Integrations</p>
+                <div>
+                    <h1>Build on GitHub</h1>
+                    <p>Customize your process with GitHub apps and an intuitive API. Integrate the tools you already use or discover new
+                    favorites to create a happier, more efficient way of working.</p>
+                    <div>
+                        <button class="integrations-img">Lern about integrations <span class="bump-link-symbol">→</span></button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
