images added to integration section

--- a/index.html
+++ b/index.html
@@ -209,6 +209,29 @@
                         <button class="integrations-img">Lern about integrations <span class="bump-link-symbol">→</span></button>
                     </div>
                 </div>
+                <div class="circled-logos">
+                    <div class="circled-logo icon-slack">
+                        <img src="https://assets-cdn.github.com/images/modules/site/integrators/slackhq.png" alt="Slack">
+                    </div>
+                    <div class="circled-logo icon-zenhub">
+                        <img src="https://assets-cdn.github.com/images/modules/site/integrators/zenhubio.png" alt="ZenHub">
+                    </div>
+                    <div class="circled-logo icon-travisCI">
+                        <img src="https://assets-cdn.github.com/images/modules/site/integrators/travis-ci.png" alt="Travis CI">
+                    </div>
+                    <div class="circled-logo icon-atom">
+                        <img src="https://assets-cdn.github.com/images/modules/site/integrators/atom.png" alt="Atom">
+                    </div>
+                    <div class="circled-logo icon-circleCI">
+                        <img src="https://assets-cdn.github.com/images/modules/site/integrators/circleci.png" alt="Circle CI">
+                    </div>
+                    <div class="circled-logo icon-google">
+                        <img src="https://assets-cdn.github.com/images/modules/site/integrators/google.png" alt="Google">
+                    </div>
+                    <div class="circled-logo icon-codeClimate">
+                        <img src="https://assets-cdn.github.com/images/modules/site/integrators/codeclimate.png" alt="Code Climate">
+                    </div>
+                </div>
             </div>
         </section>
     </main>
