margins fix for buttons

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="forTeamsSignupContainer">
                 <h1>A better way to work together</h1>
                 <p>GitHub brings teams together to work through problems, move ideas forward, and learn from each other along the way.</p>
-                <div>
+                <div class="btn">
                     <button class="joinGitHub">Sign up your team <span class="bump-link-symbol">→</span></button>
                 </div>
             </div>
@@ -159,12 +159,12 @@
                     <h1>Boxes? Check.</h1>
                     <p>We worry about your administrative and security needs so you don’t have to. From flexible hosting to authentication
                     options, GitHub can help you meet your team’s requirements.</p>
-                    <div>
+                    <div class="btn">
                         <button class="for-business">How GitHub works for business <span class="bump-link-symbol">→</span></button>
                     </div>
                 </div>
-            </div>
-            <div class="host">
+            <!-- </div>
+            <div class="host"> -->
                 <div class="largeContainer">
                     <div class="img-box">
                         <img src="https://assets-cdn.github.com/images/modules/site/home-illo-business.png" alt="">
@@ -205,7 +205,7 @@
                     <h1>Build on GitHub</h1>
                     <p>Customize your process with GitHub apps and an intuitive API. Integrate the tools you already use or discover new
                     favorites to create a happier, more efficient way of working.</p>
-                    <div>
+                    <div class="btn-integrations">
                         <button class="integrations-img">Lern about integrations <span class="bump-link-symbol">→</span></button>
                     </div>
                 </div>
