more-tools link and info added

--- a/index.html
+++ b/index.html
@@ -232,6 +232,12 @@
                         <img src="https://assets-cdn.github.com/images/modules/site/integrators/codeclimate.png" alt="Code Climate">
                     </div>
                 </div>
+                <div class="more-tools">
+                    <p>Sometimes, there’s more than one tool for the job. Why not try something new?</p>
+                    <p>
+                        <a>Browse GitHub Marketplace <span class="bump-link-symbol">→</span></a>
+                    </p>
+                </div>
             </div>
         </section>
     </main>
