comunity section added

--- a/index.html
+++ b/index.html
@@ -240,6 +240,15 @@
                 </div>
             </div>
         </section>
+        <section class="community">
+            <div class="communityContainer">
+                <p class="sectionTitle">Community</p>
+                <div>
+                    <h1>Welcome home, developers</h1>
+                    <p>GitHub is home to the world’s largest community of developers and their projects...</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
