--- a/index.html
+++ b/index.html
@@ -248,6 +248,93 @@
                     <p>GitHub is home to the world’s largest community of developers and their projects...</p>
                 </div>
             </div>
+            <div class="stories">
+                <article class="story">
+                    <a class="story-link" href="#">
+                        <div>
+                            <div>
+                                <img src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/ariya.jpg" alt="Ariya Hidayat">
+                            </div>
+                        </div>
+                        <div>
+                            <h1>Ariya Hidayat</h1>
+                            <p>PhantomJS maintainer</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="story">
+                    <a class="story-link" href="#">
+                        <div>
+                            <div>
+                                <img src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/freakboy3742.jpg" alt="Russell Keith-Magee">
+                            </div>
+                        </div>
+                        <div>
+                            <h1>Russell Keith-Magee</h1>
+                            <p>PyBee maintainer</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="story">
+                    <a class="story-link" href="#">
+                        <div>
+                            <div>
+                                <img src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/mailchimp.jpg" alt="MailChimp">
+                            </div>
+                        </div>
+                        <div>
+                            <h1>MailChimp</h1>
+                            <p>Marketing customer</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="story">
+                    <a class="story-link" href="#">
+                        <div>
+                            <div>
+                                <img src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/kris-nova.jpg" alt="Kris Nova">
+                            </div>
+                        </div>
+                        <div>
+                            <h1>Kris Nova</h1>
+                            <p>Kubernetes/kops maintainer</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="story">
+                    <a class="story-link" href="#">
+                        <div>
+                            <div><img src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/yyx990803.jpg" alt="Evan You"></div>
+                        </div>
+                        <div>
+                            <h1>Evan You</h1>
+                            <p>Vue maintainer</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="story">
+                    <a class="story-link" href="#">
+                        <div>
+                            <div><img src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/mapbox.jpg" alt="Mapbox"></div>
+                        </div>
+                        <div>
+                            <h1>Mapbox</h1>
+                            <p>Software customer</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="story">
+                    <a class="story-link" href="#">
+                        <div>
+                            <div><img src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/jessfraz.jpg" alt="Jess Frazelle"></div>
+                        </div>
+                        <div>
+                            <h1>Jess Frazelle</h1>
+                            <p>Kubernetes, previously Docker maintainer</p>
+                        </div>
+                    </a>
+                </article>
+            </div>
         </section>
     </main>
 </body>
