--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                     <a class="story-link" href="#">
                         <div>
                             <div>
-                                <img src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/ariya.jpg" alt="Ariya Hidayat">
+                                <img class="story-img" src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/ariya.jpg" alt="Ariya Hidayat">
                             </div>
                         </div>
                         <div>
@@ -266,7 +266,7 @@
                     <a class="story-link" href="#">
                         <div>
                             <div>
-                                <img src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/freakboy3742.jpg" alt="Russell Keith-Magee">
+                                <img class="story-img" src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/freakboy3742.jpg" alt="Russell Keith-Magee">
                             </div>
                         </div>
                         <div>
@@ -279,7 +279,7 @@
                     <a class="story-link" href="#">
                         <div>
                             <div>
-                                <img src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/mailchimp.jpg" alt="MailChimp">
+                                <img class="story-img" src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/mailchimp.jpg" alt="MailChimp">
                             </div>
                         </div>
                         <div>
@@ -292,7 +292,7 @@
                     <a class="story-link" href="#">
                         <div>
                             <div>
-                                <img src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/kris-nova.jpg" alt="Kris Nova">
+                                <img class="story-img" src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/kris-nova.jpg" alt="Kris Nova">
                             </div>
                         </div>
                         <div>
@@ -304,7 +304,7 @@
                 <article class="story">
                     <a class="story-link" href="#">
                         <div>
-                            <div><img src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/yyx990803.jpg" alt="Evan You"></div>
+                            <div><img class="story-img" src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/yyx990803.jpg" alt="Evan You"></div>
                         </div>
                         <div>
                             <h1>Evan You</h1>
@@ -315,7 +315,7 @@
                 <article class="story">
                     <a class="story-link" href="#">
                         <div>
-                            <div><img src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/mapbox.jpg" alt="Mapbox"></div>
+                            <div><img class="story-img" src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/mapbox.jpg" alt="Mapbox"></div>
                         </div>
                         <div>
                             <h1>Mapbox</h1>
@@ -326,7 +326,7 @@
                 <article class="story">
                     <a class="story-link" href="#">
                         <div>
-                            <div><img src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/jessfraz.jpg" alt="Jess Frazelle"></div>
+                            <div><img class="story-img" src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/jessfraz.jpg" alt="Jess Frazelle"></div>
                         </div>
                         <div>
                             <h1>Jess Frazelle</h1>
