horisontal scrolling container created for story cards

--- a/index.html
+++ b/index.html
@@ -248,13 +248,11 @@
                     <p>GitHub is home to the world’s largest community of developers and their projects...</p>
                 </div>
             </div>
-            <div class="stories">
-                <article class="story">
+            <div class="stories scrolling-wrapper">
+                <article class="story card">
                     <a class="story-link" href="#">
-                        <div>
-                            <div>
-                                <img class="story-img" src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/ariya.jpg" alt="Ariya Hidayat">
-                            </div>
+                        <div class="story-img-box">
+                            <img class="story-img" src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/ariya.jpg" alt="Ariya Hidayat">
                         </div>
                         <div>
                             <h1>Ariya Hidayat</h1>
@@ -262,12 +260,10 @@
                         </div>
                     </a>
                 </article>
-                <article class="story">
+                <article class="story card">
                     <a class="story-link" href="#">
                         <div>
-                            <div>
-                                <img class="story-img" src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/freakboy3742.jpg" alt="Russell Keith-Magee">
-                            </div>
+                            <img class="story-img" src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/freakboy3742.jpg" alt="Russell Keith-Magee">
                         </div>
                         <div>
                             <h1>Russell Keith-Magee</h1>
@@ -275,12 +271,10 @@
                         </div>
                     </a>
                 </article>
-                <article class="story">
+                <article class="story card">
                     <a class="story-link" href="#">
                         <div>
-                            <div>
-                                <img class="story-img" src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/mailchimp.jpg" alt="MailChimp">
-                            </div>
+                            <img class="story-img" src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/mailchimp.jpg" alt="MailChimp">
                         </div>
                         <div>
                             <h1>MailChimp</h1>
@@ -288,12 +282,10 @@
                         </div>
                     </a>
                 </article>
-                <article class="story">
+                <article class="story card">
                     <a class="story-link" href="#">
                         <div>
-                            <div>
-                                <img class="story-img" src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/kris-nova.jpg" alt="Kris Nova">
-                            </div>
+                            <img class="story-img" src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/kris-nova.jpg" alt="Kris Nova">
                         </div>
                         <div>
                             <h1>Kris Nova</h1>
@@ -301,7 +293,7 @@
                         </div>
                     </a>
                 </article>
-                <article class="story">
+                <article class="story card">
                     <a class="story-link" href="#">
                         <div>
                             <div><img class="story-img" src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/yyx990803.jpg" alt="Evan You"></div>
@@ -312,7 +304,7 @@
                         </div>
                     </a>
                 </article>
-                <article class="story">
+                <article class="story card">
                     <a class="story-link" href="#">
                         <div>
                             <div><img class="story-img" src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/mapbox.jpg" alt="Mapbox"></div>
@@ -323,7 +315,7 @@
                         </div>
                     </a>
                 </article>
-                <article class="story">
+                <article class="story card">
                     <a class="story-link" href="#">
                         <div>
                             <div><img class="story-img" src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/jessfraz.jpg" alt="Jess Frazelle"></div>
