text align fix in the host-box

--- a/index.html
+++ b/index.html
@@ -254,9 +254,11 @@
                         <div class="story-img-box">
                             <img class="story-img" src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/ariya.jpg" alt="Ariya Hidayat">
                         </div>
-                        <div>
-                            <h1>Ariya Hidayat</h1>
-                            <p>PhantomJS maintainer</p>
+                        <div class="text-items">
+                            <div class="text-center">
+                                <h1 class="story-title">Ariya Hidayat</h1>
+                                <p>PhantomJS maintainer</p>
+                            </div>
                         </div>
                     </a>
                 </article>
