margin fix in diferent sections

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
         <section class="community">
             <div class="communityContainer">
                 <p class="sectionTitle">Community</p>
-                <div>
+                <div class="sectionTitle-community">
                     <h1>Welcome home, developers</h1>
                     <p>GitHub is home to the world’s largest community of developers and their projects...</p>
                 </div>
