stories framing done

--- a/index.html
+++ b/index.html
@@ -267,9 +267,11 @@
                         <div>
                             <img class="story-img" src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/freakboy3742.jpg" alt="Russell Keith-Magee">
                         </div>
-                        <div>
-                            <h1>Russell Keith-Magee</h1>
-                            <p>PyBee maintainer</p>
+                        <div class="text-items">
+                            <div class="text-center">
+                                <h1 class="story-title">Russell Keith-Magee</h1>
+                                <p>PyBee maintainer</p>
+                            </div>
                         </div>
                     </a>
                 </article>
@@ -278,9 +280,11 @@
                         <div>
                             <img class="story-img" src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/mailchimp.jpg" alt="MailChimp">
                         </div>
-                        <div>
-                            <h1>MailChimp</h1>
-                            <p>Marketing customer</p>
+                        <div class="text-items">
+                            <div class="text-center">
+                                <h1 class="story-title">MailChimp</h1>
+                                <p>Marketing customer</p>
+                            </div>
                         </div>
                     </a>
                 </article>
@@ -289,9 +293,11 @@
                         <div>
                             <img class="story-img" src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/kris-nova.jpg" alt="Kris Nova">
                         </div>
-                        <div>
-                            <h1>Kris Nova</h1>
-                            <p>Kubernetes/kops maintainer</p>
+                        <div class="text-items">
+                            <div class="text-center">
+                                <h1 class="story-title">Kris Nova</h1>
+                                <p>Kubernetes/kops maintainer</p>
+                            </div>
                         </div>
                     </a>
                 </article>
@@ -300,20 +306,26 @@
                         <div>
                             <div><img class="story-img" src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/yyx990803.jpg" alt="Evan You"></div>
                         </div>
-                        <div>
-                            <h1>Evan You</h1>
-                            <p>Vue maintainer</p>
+                        <div class="text-items">
+                            <div class="text-center">
+                                <h1 class="story-title">Evan You</h1>
+                                <p>Vue maintainer</p>
+                            </div>
                         </div>
                     </a>
                 </article>
                 <article class="story card">
                     <a class="story-link" href="#">
                         <div>
-                            <div><img class="story-img" src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/mapbox.jpg" alt="Mapbox"></div>
+                            <div>
+                                <img class="story-img" src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/mapbox.jpg" alt="Mapbox">
+                            </div>
                         </div>
-                        <div>
-                            <h1>Mapbox</h1>
-                            <p>Software customer</p>
+                        <div class="text-items">
+                            <div class="text-center">
+                                <h1 class="story-title">Mapbox</h1>
+                                <p>Software customer</p>
+                            </div>
                         </div>
                     </a>
                 </article>
@@ -322,9 +334,11 @@
                         <div>
                             <div><img class="story-img" src="https://assets-cdn.github.com/images/modules/site/case-studies/hero/jessfraz.jpg" alt="Jess Frazelle"></div>
                         </div>
-                        <div>
-                            <h1>Jess Frazelle</h1>
-                            <p>Kubernetes, previously Docker maintainer</p>
+                        <div class="text-items">
+                            <div class="text-center">
+                                <h1 class="story-title">Jess Frazelle</h1>
+                                <p>Kubernetes, previously Docker maintainer</p>
+                            </div>
                         </div>
                     </a>
                 </article>
