--- a/index.html
+++ b/index.html
@@ -163,8 +163,6 @@
                         <button class="for-business">How GitHub works for business <span class="bump-link-symbol">→</span></button>
                     </div>
                 </div>
-            <!-- </div>
-            <div class="host"> -->
                 <div class="largeContainer">
                     <div class="img-box">
                         <img src="https://assets-cdn.github.com/images/modules/site/home-illo-business.png" alt="">
@@ -342,6 +340,40 @@
                         </div>
                     </a>
                 </article>
+            </div>
+            <div class="comunityStats">
+                <div class="comunityStatsContainer">
+                    <div>
+                        <p>...whether you’re making your first commit or sending a Rover to Mars, there’s room for you here, too.</p>
+                    </div>
+                    <div class="stats">
+                        <a href="#">
+                            <div class="orange-circle">   
+                                <span class="block-white">"96M" <sup>*</sup></span>
+                                <span>repositories worldwide</span>
+                            </div>
+                            <div>
+                                <p>GitHub’s users create and maintain influential technologies alongside the world’s largest 
+                                    <span class="text-orange-light">open source&nbsp;community</span>.
+                                </p>
+                                <svg class="octicon-triangle-right" viewBox="0 0 6 16" version="1.1" width="6" height="16"
+                                    aria-hidden="true">
+                                    <path fill-rule="evenodd" d="M0 14l6-6-6-6v12z"></path>
+                                </svg>
+                            </div>
+                        </a>
+                            <div>
+
+                            </div>
+                        <a href="#">
+                        </a>
+                        <a href="#">
+                        </a>
+                    </div>
+                </div>
+                <div>
+                    <p></p>
+                </div>
             </div>
         </section>
     </main>
