--- a/index.html
+++ b/index.html
@@ -342,34 +342,30 @@
                 </article>
             </div>
             <div class="comunityStats">
-                <div class="comunityStatsContainer">
-                    <div>
-                        <p>...whether you’re making your first commit or sending a Rover to Mars, there’s room for you here, too.</p>
-                    </div>
-                    <div class="stats">
-                        <a href="#">
-                            <div class="orange-circle">   
-                                <span class="block-white">"96M" <sup>*</sup></span>
-                                <span>repositories worldwide</span>
-                            </div>
-                            <div>
-                                <p>GitHub’s users create and maintain influential technologies alongside the world’s largest 
-                                    <span class="text-orange-light">open source&nbsp;community</span>.
-                                </p>
-                                <svg class="octicon-triangle-right" viewBox="0 0 6 16" version="1.1" width="6" height="16"
-                                    aria-hidden="true">
-                                    <path fill-rule="evenodd" d="M0 14l6-6-6-6v12z"></path>
-                                </svg>
-                            </div>
-                        </a>
-                            <div>
+                <p>...whether you’re making your first commit or sending a Rover to Mars, there’s room for you here, too.</p>
+                <div class="stats">
+                    <a href="#">
+                        <div class="orange-circle">   
+                            <span class="block-white">96M<sup>*</sup></span>
+                            <span>repositories worldwide</span>
+                        </div>
+                        <div class="stats-text">
+                            <p>GitHub’s users create and maintain influential technologies alongside the world’s largest 
+                                <span class="text-orange-light">open source&nbsp;community</span>.
+                            </p>
+                            <svg class="octicon-triangle-right" viewBox="0 0 6 16" version="1.1" width="6" height="16"
+                                aria-hidden="true">
+                                <path fill-rule="evenodd" d="M0 14l6-6-6-6v12z"></path>
+                            </svg>
+                        </div>
+                    </a>
+                        <div>
 
-                            </div>
-                        <a href="#">
-                        </a>
-                        <a href="#">
-                        </a>
-                    </div>
+                        </div>
+                    <a href="#">
+                    </a>
+                    <a href="#">
+                    </a>
                 </div>
                 <div>
                     <p></p>
